--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1> Un super titre </h1>
+        <h1> Un super titre numero 2</h1>
     </body>
 </html>
